--- a/styles.css
+++ b/styles.css
@@ -113,6 +113,10 @@
             width: 100%;
             height:200px;
         }
+        a{
+            text-decoration: none;
+            color: black;
+        }
 
         .project-info {
             padding: 1.5rem;
